--- a/templates/default/keystone/default_catalog.templates.erb
+++ b/templates/default/keystone/default_catalog.templates.erb
@@ -33,10 +33,10 @@ catalog.RegionOne.s3.internalURL = http://<%= node[:ip][:swift] %>:8080
 catalog.RegionOne.s3.adminURL = http://<%= node[:ip][:swift] %>:8080
 catalog.RegionOne.s3.name = swift_s3
 
-catalog.RegionOne.network.publicURL = http://<%= node[:ip][:quantum] %>:9696
-catalog.RegionOne.network.adminURL = http://<%= node[:ip][:quantum] %>:9696
-catalog.RegionOne.network.internalURL = http://<%= node[:ip][:quantum] %>:9696
-catalog.RegionOne.network.name = quantum
+catalog.RegionOne.network.publicURL = http://<%= node[:ip][:neutron] %>:9696
+catalog.RegionOne.network.adminURL = http://<%= node[:ip][:neutron] %>:9696
+catalog.RegionOne.network.internalURL = http://<%= node[:ip][:neutron] %>:9696
+catalog.RegionOne.network.name = neutron
 
 catalog.RegionOne.orchestration.publicURL = http://<%= node[:ip][:heat] %>:8004/v1/$(tenant_id)s
 catalog.RegionOne.orchestration.adminURL = http://<%= node[:ip][:heat] %>/v1/$(tenant_id)s
