--- a/templates/default/monitoring/newhost.cfg.erb
+++ b/templates/default/monitoring/newhost.cfg.erb
@@ -1,16 +1,14 @@
 
 define host{
-        use                     linux-server            ; Name of host template to use
-                                                        ; This host definition will inherit all variables that are defined
-                                                        ; in (or inherited by) the linux-server host template definition.
-        host_name               <%"host-" + node[:auto][:external_ip]%>
-        alias                   <%node[:auto][:external_ip]%>
-        address                 <%node[:auto][:external_ip]%>
+        use                     linux-server     
+        host_name               <%= "host-" + node[:auto][:external_ip]%>
+        alias                   <%= node[:auto][:external_ip]%>
+        address                 <%= node[:auto][:external_ip]%>
         }
 
 define service{
         use                             generic-service         ; Name of service template to use
-        host_name                       <%"host-" + node[:auto][:external_ip]%>
+        host_name                       <%= "host-" + node[:auto][:external_ip]%>
         service_description             PING
         check_command                   check_ping!100.0,20%!500.0,60%
         }
